its working now! split up loader class, fixed reading from a folder, working on multithreading